fix(email): [SCAFA-603] Fix alignment of table with payment method details in order confirmation email

--- a/src/web/css/source/_email-extend.less
+++ b/src/web/css/source/_email-extend.less
@@ -41,3 +41,16 @@
         }
     }
 }
+
+//
+//  Order Summary
+//  ----------------------------------------------
+.order-details {
+    .payment-method {
+        .data.table {
+            th {
+                text-align: left;
+            }
+        }
+    }
+}
